--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
   - 1.9.2
   - 1.9.3
   - jruby-18mode
-  - jruby-19mode 
+  # - jruby-19mode Disabled for core dump on travis http://travis-ci.org/#!/mbj/veritas-elasticsearch-adapter/jobs/1768119
   - rbx-18mode
   - rbx-19mode
 notifications:
