--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 before_install:
   - gem install bundler
+  - sudo service elasticsearch start
+  - sleep 3 # remove this once we have Driver#wait_for_connection
 language: ruby
 script: 'bundle exec rake ci'
 rvm:
