--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
   - sudo service elasticsearch start
   - sleep 3 # remove this once we have Driver#wait_for_connection
 language: ruby
-script: 'bundle exec rake ci'
+script: 'bundle exec rake spec'
 rvm:
   - 1.8.7
   - 1.9.2
