--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 before_script: spec/setup/arangodb.sh
-script: 'bundle exec rake ci'
+script: 'bundle exec rake spec'
 rvm:
   - ree
   - 1.8.7
