--- a/config/mutant.yml
+++ b/config/mutant.yml
@@ -1,3 +1,3 @@
 ---
-name: veritas-elasticsearch-adapter
-namespace: Veritas::Adapter::Elasticsearch
+name: axiom-elasticsearch-adapter
+namespace: Axiom::Adapter::Elasticsearch
