--- a/config/reek.yml
+++ b/config/reek.yml
@@ -10,7 +10,7 @@ UncommunicativeParameterName:
 LargeClass:
   max_methods: 10
   # Query needs to be broken up into a builder and executor
-  exclude: [ "Veritas::Adapter::Elasticsearch::Query" ]
+  exclude: [ "Axiom::Adapter::Elasticsearch::Query" ]
   enabled: true
   max_instance_variables: 3
 UncommunicativeMethodName:
