--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: ruby
 services:
   - elasticsearch
-script: 'bundle exec rake spec'
+language: ruby
+script: 'bundle exec rake ci'
 rvm:
   - ree
   - 1.8.7
@@ -13,13 +13,7 @@ rvm:
   - jruby-19mode
   - jruby-head
   - rbx-18mode
-matrix:
-  allow_failures:
-    - rvm: 1.8.7
-    - rvm: ree
-    - rvm: rbx-18mode
-    - rvm: jruby-18mode
-    - rvm: rbx-19mode
+  - rbx-19mode
 notifications:
   irc: "irc.freenode.org#datamapper"
   email:
